[gd_scene load_steps=4 format=2]

[ext_resource path="res://blue_square.png" type="Texture" id=1]
[ext_resource path="res://source/User Interface/InventoryControl.gd" type="Script" id=2]
[ext_resource path="res://kaol.png" type="Texture" id=3]

[node name="InventoryControl" type="Control"]
visible = false
modulate = Color( 1, 1, 1, 0.662745 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.561279
margin_right = 0.561279
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 70.0
margin_top = -150.0
margin_right = -50.0
margin_bottom = 150.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="kaol" type="Sprite" parent="TextureRect"]
position = Vector2( 111, 144 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="LabelControl" type="Control" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.561218
margin_right = -0.561218
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect/LabelControl"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 230.0
margin_top = -15.0
margin_right = 368.0
margin_bottom = 147.0
text = "Strength:
Ranged Ability:
Max Speed:
Max Health:
Max Energy:
Energy Regen:
Potion Regen:


"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="TextureRect/LabelControl"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 230.0
margin_top = -141.35
margin_right = 319.0
margin_bottom = -31.35
text = "LV:

HP: 

Current EXP:

For Next LV:"
scroll_active = false

[node name="StatsControl" type="Control" parent="TextureRect"]
margin_right = 40.0
margin_bottom = 40.0

[node name="lvl" type="RichTextLabel" parent="TextureRect/StatsControl"]
margin_left = 357.439
margin_top = 10.0
margin_right = 485.439
margin_bottom = 24.0
text = "111"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp" type="RichTextLabel" parent="TextureRect/StatsControl"]
anchor_left = -3.25
margin_left = 487.439
margin_top = 38.0
margin_right = 616.484
margin_bottom = 52.0
text = "100/100"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cur_exp" type="RichTextLabel" parent="TextureRect/StatsControl"]
anchor_left = -3.25
margin_left = 487.439
margin_top = 70.0
margin_right = 616.484
margin_bottom = 83.9999
text = "111"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_LVL_exp" type="RichTextLabel" parent="TextureRect/StatsControl"]
anchor_left = -3.25
margin_left = 487.439
margin_top = 98.0
margin_right = 616.484
margin_bottom = 112.0
text = "111"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="str" type="RichTextLabel" parent="TextureRect/StatsControl"]
anchor_left = -3.25
margin_left = 487.439
margin_top = 136.0
margin_right = 616.484
margin_bottom = 150.0
text = "111"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ranged" type="RichTextLabel" parent="TextureRect/StatsControl"]
anchor_left = -3.25
margin_left = 487.439
margin_top = 150.0
margin_right = 616.484
margin_bottom = 164.0
text = "111"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="max_speed" type="RichTextLabel" parent="TextureRect/StatsControl"]
anchor_left = -3.25
margin_left = 487.439
margin_top = 165.0
margin_right = 616.484
margin_bottom = 179.0
text = "111"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="max_health" type="RichTextLabel" parent="TextureRect/StatsControl"]
anchor_left = -3.25
margin_left = 487.439
margin_top = 180.0
margin_right = 616.484
margin_bottom = 194.0
text = "111"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="max_energy" type="RichTextLabel" parent="TextureRect/StatsControl"]
anchor_left = -3.25
margin_left = 487.439
margin_top = 195.0
margin_right = 616.484
margin_bottom = 209.0
text = "111"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stam_regen" type="RichTextLabel" parent="TextureRect/StatsControl"]
anchor_left = -3.25
margin_left = 487.439
margin_top = 210.0
margin_right = 616.484
margin_bottom = 224.0
text = "111"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="potion_regen" type="RichTextLabel" parent="TextureRect/StatsControl"]
anchor_left = -3.25
margin_left = 487.439
margin_top = 225.0
margin_right = 616.484
margin_bottom = 239.0
text = "111"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
